# umbra-sdk

./: .gitignore  README.md
.github/workflows/: sdk-go.yml  sdk-release.yml  sdk-rust.yml  sdk-typescript.yml
umbra-go/: README.md  api.go  api_test.go  auth.go  backup.go  backup_test.go  backup_types.go  callback.go  callback_test.go  client.go  client_test.go  config.go  config_test.go  device.go  device_metadata.go  device_metadata_other.go  device_metadata_test.go  device_metadata_windows.go  device_metadata_windows_test.go  device_test.go  errors.go  go.mod  live_e2e_test.go  opener.go  store.go  sync.go  sync_test.go  user.go
umbra-rust/: Cargo.toml  README.md
umbra-rust/src/: api.rs  auth.rs  backup.rs  callback.rs  client.rs  config.rs  device.rs  error.rs  lib.rs  opener.rs  store.rs  sync.rs  user.rs
umbra-rust/src/device_metadata/: mod.rs  windows.rs
umbra-rust/tests/: api_tests.rs  backup_tests.rs  config_tests.rs  device_tests.rs  sync_tests.rs
umbra-typescript/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts
umbra-typescript/src/: api.ts  auth.ts  backup.ts  callback.ts  client.ts  config.ts  device.ts  electron.ts  errors.ts  hash.ts  index.ts  node.ts  opener.ts  store.ts  sync.ts  user.ts
umbra-typescript/tests/: api.test.ts  backup.test.ts  config.test.ts  device.test.ts  electron.test.ts  helpers.ts  node.test.ts  sync.test.ts
